--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 </head>
 <body>
     <main>
+        <div class="container">
+          <div id="carousel">
+            <i id="prev" class="fa-solid fa-circle-chevron-left fa-3x"></i>
+            <div class="gallery h-100">
+              <img class="active" src="./img/01.webp" alt="img" />
+            </div>
+            <i id="next" class="fa-solid fa-circle-chevron-right fa-3x"></i>
+          </div>
+        </div>
+      </main>
     <script src="./main.js"></script>
 </body>
 </html>
