--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
             <i id="prev" class="fa-solid fa-circle-chevron-left fa-3x"></i>
             <div class="gallery h-100">
               <img class="active" src="./img/01.webp" alt="img" />
+              <div class="caption text-white">
+                <h3>Marvel's Spiderman Miles Morales</h3>
+                <p>
+                  Experience the rise of Miles Morales as the new hero masters
+                  incredible, explosive new powers to become his own Spider-Man.
+                </p>
+              </div>
             </div>
             <i id="next" class="fa-solid fa-circle-chevron-right fa-3x"></i>
+            </div>
           </div>
-        </div>
       </main>
     <script src="./main.js"></script>
 </body>
