--- a/index.html
+++ b/index.html
@@ -19,27 +19,18 @@
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Carousel</title>
 </head>
 <body>
     <main>
-        <div class="container">
-          <div id="carousel">
-            <i id="prev" class="fa-solid fa-circle-chevron-left fa-3x"></i>
-            <div class="gallery h-100">
-              <img class="active" src="./img/01.webp" alt="img" />
-              <div class="caption text-white">
-                <h3>Marvel's Spiderman Miles Morales</h3>
-                <p>
-                  Experience the rise of Miles Morales as the new hero masters
-                  incredible, explosive new powers to become his own Spider-Man.
-                </p>
-              </div>
-            </div>
+    <div class="container">
+        <div id="carousel">
             <i id="next" class="fa-solid fa-circle-chevron-right fa-3x"></i>
-            </div>
-          </div>
-      </main>
+            <div class="gallery h-100"></div>
+          <i id="prev" class="fa-solid fa-circle-chevron-left fa-3x"></i>
+        </div>
+    </div>
+  </main>
     <script src="./main.js"></script>
 </body>
 </html>
